--- a/requirements.txt
+++ b/requirements.txt
@@ -1,107 +1,42 @@
 alembic==1.6.5
-anaconda==0.0.1.1
-argon2-cffi==20.1.0
-astroid==2.4.2
-async-generator==1.10
-atomicwrites==1.4.0
-attrs==20.2.0
-backcall==0.2.0
-bleach==3.2.1
-certifi==2020.6.20
-cffi==1.14.3
-chardet==3.0.4
+Babel==2.9.1
+blinker==1.4
+certifi==2021.5.30
+chardet==4.0.0
 click==8.0.1
-colorama==0.4.3
-coverage==5.3
-cycler==0.10.0
-decorator==4.4.2
-defusedxml==0.6.0
+dnspython==2.1.0
 dominate==2.6.0
-entrypoints==0.3
-et-xmlfile==1.1.0
+elasticsearch==7.13.3
+email-validator==1.1.3
 Flask==2.0.1
+Flask-Babel==2.0.0
 Flask-Bootstrap==3.3.7.1
 Flask-Login==0.5.0
-Flask-Migrate==3.1.0
+Flask-Mail==0.9.1
+Flask-Migrate==3.0.1
+Flask-Moment==1.0.1
 Flask-SQLAlchemy==2.5.1
 Flask-WTF==0.15.1
 greenlet==1.1.0
 idna==2.10
-iniconfig==1.1.1
-ipykernel==5.3.4
-ipython==7.19.0
-ipython-genutils==0.2.0
-isort==5.5.3
 itsdangerous==2.0.1
-jedi==0.17.2
 Jinja2==3.0.1
-joblib==0.17.0
-json5==0.9.5
-jsonschema==3.2.0
-jupyter-client==6.1.7
-jupyter-core==4.6.3
-jupyterlab==2.2.9
-jupyterlab-pygments==0.1.2
-jupyterlab-server==1.2.0
-kiwisolver==1.2.0
-lazy-object-proxy==1.4.3
+langdetect==1.0.9
 Mako==1.1.4
 MarkupSafe==2.0.1
-matplotlib==3.3.2
-mccabe==0.6.1
-mistune==0.8.4
-mpmath==1.1.0
-nbclient==0.5.1
-nbconvert==6.0.7
-nbformat==5.0.8
-nest-asyncio==1.4.2
-nibabel==3.2.1
-notebook==6.1.5
-numpy==1.19.2
-openpyxl==3.0.7
-packaging==20.4
-pandas==1.1.4
-pandocfilters==1.4.3
-parso==0.7.1
-pickleshare==0.7.5
-Pillow==7.2.0
-pluggy==0.13.1
-prometheus-client==0.8.0
-prompt-toolkit==3.0.8
-py==1.9.0
-pycparser==2.20
-Pygments==2.7.2
-pylint==2.6.0
-pyparsing==2.4.7
-pyrsistent==0.17.3
-pytest==6.1.1
-pytest-cov==2.10.1
+PyJWT==2.1.0
 python-dateutil==2.8.1
-python-dotenv==0.19.0
+python-dotenv==0.18.0
 python-editor==1.0.4
-pytz==2020.4
-pywin32==228
-pywinpty==0.5.7
-pyzmq==19.0.2
-requests==2.24.0
-scikit-learn==0.23.2
-scipy==1.5.2
-Send2Trash==1.5.0
-six==1.15.0
-sklearn==0.0
-SQLAlchemy==1.4.22
-sympy==1.6.2
-terminado==0.9.1
-testpath==0.4.4
-threadpoolctl==2.1.0
-toml==0.10.1
-tornado==6.1
-traitlets==5.0.5
-urllib3==1.25.11
+pytz==2021.1
+requests==2.25.1
+six==1.16.0
+SQLAlchemy==1.4.20
+urllib3==1.26.6
 visitor==0.1.3
-wcwidth==0.2.5
-webencodings==0.5.1
 Werkzeug==2.0.1
-wrapt==1.12.1
 WTForms==2.3.3
-xlrd==2.0.1
+
+# requirements for Heroku
+#psycopg2==2.9.1
+#gunicorn==20.1.0
